# ratp-mcp

./: .gitignore  main.py  pyproject.toml  ratp.py
ratp-api/: README.md  pyproject.toml
ratp-api/navitia_client/: __init__.py
ratp-api/navitia_client/models/: __init__.py  address.py  admin.py  amount.py  beta_endpoints.py  calendar.py  calendar_exception.py  calendar_period.py  car_park.py  cause.py  cell_lat_schema.py  cell_lon_schema.py  channel.py  channel_types_item.py  co2.py  code.py  comment.py  commercial_mode.py  companie.py  context.py  contributor.py  coord.py  cost.py  coverage.py  coverage_error.py  current_availability.py  current_availability_status.py  dataset.py  date_time_type.py  disruption.py  disruption_property.py  distances.py  durations.py  effect.py  equipment_details.py  equipment_details_embedded_type.py  equipment_report.py  error.py  exception.py  fare.py  (+173 more)
ratp-route-calc-api/: README.md  pyproject.toml
ratp-route-calc-api/ratp_route_calc/: __init__.py
ratp-route-calc-api/ratp_route_calc/models/: __init__.py  address.py  admin.py  amount.py  beta_endpoints.py  calendar.py  calendar_exception.py  calendar_period.py  car_park.py  cause.py  cell_lat_schema.py  cell_lon_schema.py  channel.py  co2.py  code.py  comment.py  commercial_mode.py  companie.py  context.py  contributor.py  coord.py  cost.py  coverage.py  coverage_error.py  current_availability.py  dataset.py  date_time_type.py  disruption.py  disruption_property.py  disruption_status.py  disruptions_response.py  distances.py  durations.py  effect.py  equipment_details.py  error.py  (+178 more)
(+105 files in other folders)
