[project]
name = "ratp-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.26.0",
    "ratp-route-calc-api",
]

[tool.uv.workspace]
members = [
    "ratp-route-calc-api",
]

[tool.uv.sources]
ratp-route-calc-api = { workspace = true }
